# onion-service-monitor

./: .gitignore  ARTI-README.md  Cargo.toml  Dockerfile  Dockerfile.arti  LICENSE-APACHE  LICENSE-MIT  README.md  arti-config.toml  docker-compose.yml  index.html  onions.json  package-lock.json  package.json  sync-data.sh  test-local.sh  vite.config.ts  vitest.config.js
.claude/: memory.md
.github/: GHCR-SETUP.md
.github/workflows/: build-arti.yml  deploy.yml  monitor.yml
docs/: ONION-LOCATION.md  index.html  nginx-config.test.js  nginx-onion-location.conf  test-onion-location.sh
docs/images/: README.md
frontend/: App.tsx  types.ts
frontend/components/: FilterBar.tsx  Footer.tsx  Header.tsx  ServiceCard.tsx
frontend/data/: services.json
frontend/theme/: index.ts
src/: main.rs
