[package]
name = "onion-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["socks", "json"] }
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-tls = "0.5"
tokio-socks = "0.5"
http = "0.2"
tower = { version = "0.4", features = ["util"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
